--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: #ccc;
+}
+
 .container {
   margin-top: 20px;
   display: flex;
@@ -24,26 +28,94 @@
 }
 
 .search {
-  width: 400px;
-  padding: 20px 25px;
-  background-color: #ccc;
-  border-radius: 10px;
+  display: flex;
+    flex-wrap: wrap;
+    width: 350px;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
 }
 
-.search__text {
-  background-color: transparent;
-  color: #686565;
-  width: 80%;
-  border: none;
-  outline-width: 0;
-  font-size: 15px;
+
+/**/
+.input[type = "text"] {
+  display: block;
+  color: rgb(34, 34, 34);
+  background: linear-gradient(142.99deg, rgba(217, 217, 217, 0.63) 15.53%, rgba(243, 243, 243, 0.63) 88.19%);
+  box-shadow: 0px 12px 24px -1px rgba(0, 0, 0,0.18);
+  border-color: rgba(7, 4, 14, 0);
+  border-radius: 50px;
+  block-size: 20px;
+  margin: 7px auto;
+  padding: 18px 15px;
+  outline: none;
+  text-align: center;
+  width: 200px;
+  transition: 0.5s;
 }
 
-.btn {
-  width: 50px;
-  height: 30px;
-  background-color: transparent;
-  border-color: #686565;
+.input[type = "text"]:hover {
+  width: 240px;
+}
+
+.input[type = "text"]:focus {
+  width: 280px;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px;
+  font-size: 10px;
+  letter-spacing: 0.4px;
+  color: #464646;
+  background-color: #e0e8ef;
+  border-style: solid;
+  border-width: 2px 2px 2px 2px;
+  border-color: rgba(255, 255, 255, 0.333);
+  border-radius: 40px;
+  transform: translate(0px, 0px) rotate(0deg);
+  transition: 0.2s;
+  box-shadow: 0px 12px 24px -1px rgba(0, 0, 0,0.18);
+ }
+ 
+ button:hover {
+  color: #516d91;
+  background-color: #E5EDF5;
+  box-shadow: -2px -1px 8px 0px #8e8d8d, 2px 1px 8px 0px #c6c6c67a;
+ }
+ 
+ button:active {
+  box-shadow: none;
+ }
+
+.card {
+  box-sizing: border-box;
+  width: 190px;
+  height: 254px;
+  background: rgba(217, 217, 217, 0.58);
+  border: 1px solid white;
+  box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
+  backdrop-filter: blur(6px);
+  border-radius: 17px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+}
+
+.card:hover {
+  border: 1px solid black;
+  transform: scale(1.05);
+}
+
+.card:active {
+  transform: scale(0.95);
 }
 
 .cards {
@@ -99,6 +171,7 @@
   margin-bottom: 10px;
   display: none;
 }
+
 .error__mensaje {
   
   color: #ff0000;
